[metadata]
name = thejoker
version = 1.0
author = Adrian Price-Whelan
author_email = adrianmpw@gmail.com
description = A custom Monte Carlo sampler for the two-body problem.
long_description =
license = MIT
url = https://github.com/adrn/thejoker
edit_on_github = False
github_project = adrn/thejoker
python_requires = ">=3.6"

[options]
install_requires = astropy; twobody>=0.5; scipy; h5py>=2.9; schwimmbad; pymc3>=3.7; exoplanet>=0.2.2; tables
setup_requires = cython
zip_safe = False
use_2to3 = False

[options.entry_points]

[options.package_data]
* = *.c
thejoker = data/*
thejoker.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build docs/examples
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True
