[metadata]
name = thejoker
author = Adrian Price-Whelan
author_email = adrianmpw@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/adrn/thejoker
description = A custom Monte Carlo sampler for the two-body problem.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = adrn/thejoker

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    astropy
    twobody>=0.6
    scipy
    h5py>=2.9
    schwimmbad>=0.3.1
    pymc3>=3.7
    exoplanet>=0.2.2
    tables

[options.entry_points]

[options.extras_require]
# Must be checked against requirements-dev.txt
test =
    pytest
    pytest-astropy
    ipython
    jupyter_client
    corner
    astroML
    pyyaml
    codecov
docs =
    sphinx==3.0.1
    sphinx-astropy
    ipython
    jupyter_client
    corner
    nbsphinx
    nbconvert
    nbformat
    ipykernel
    astroML
    pyyaml

[options.package_data]
* = *.c
thejoker.src = fast_likelihood.pyx
thejoker.tests = coveragerc

[tool:pytest]
testpaths = "thejoker" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    thejoker/_astropy_init*
    thejoker/conftest.py
    thejoker/*setup_package*
    thejoker/tests/*
    thejoker/*/tests/*
    */thejoker/_astropy_init*
    */thejoker/conftest.py
    */thejoker/*setup_package*
    */thejoker/tests/*
    */thejoker/*/tests/*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_